2007-11-25  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/build.bat: added crude build script for win32.  
	Everything is hard-coded hence is not configurable (yet).
	
	* workben/addon_pkg/META-INF/manifest.xml: added manifest entry for 
	ProtocolHandler.xcu.

2007-11-21  Kohei Yoshida  <kyoshida@novell.com>

	* source/ui/resmgr.cxx: applied fix from Tor Lillqvist to get it to 
	compile with the Microsoft compiler.

2007-11-21  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/matrix.hxx:
	* source/numeric/matrix.cxx: added provision for replacing ublas
	dependency.
	
	* source/ui/basedlg.cxx: removed fprintf statement to get it to build.
	
	* workben/addon_pkg/Makefile.in: modified packaging method to prevent
	.svn contents from being packaged.
	
	* workben/addon_pkg/META-INF/manifest.xml: fixed the shared library
	location.

2007-11-18  Kazunari Hirano  <khirano@gmail.com>

	* workben/addon_pkg/translation/ja/scsolver.properties: added Japanese
	translation.
	
2007-11-18  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/Addons.xcu: added French and Japanese menus.
	
	* workben/addon_pkg/license.txt: removed non-printable characters.
	
	* workben/addon_pkg/Makefile.in: make clean only removes object files 
	but not the object file directory.
	
	* workben/addon_pkg/translation/en-US/scsolver.properties:
	* workben/addon_pkg/translation/fr/scsolver.properties: removed HelpText
	entries since we don't make use of them yet.

2007-11-12  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/cellfuncobj.hxx:
	* source/numeric/cellfuncobj.cxx: made the fake variable vector a data
	member to avoid returning a reference to a local variable.

2007-11-08  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/tool/global.hxx:
	* source/numeric/matrix.cxx: re-wrote parts of it to (try to) get it to 
	compile under sun studio 12 compiler.

2007-11-08  Fridrich Strba  <fridrich.strba@bluewin.ch>
