@@ -1,3 +1,11 @@
+2007-11-26  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/inc/numeric/polyeqnsolver.hxx: added #include <exception> to
+	fix build breakage on PLD Linux.
+	
+	* workben/addon_pkg/Makefile.in: changed the extension from zip to oxt,
+	and removed hard-coded '-mtune=pentium3'.
+
 2007-11-25  Kohei Yoshida  <kyoshida@novell.com>
 
 	* workben/addon_pkg/build.bat: added crude build script for win32.  
